eks-module/2_eks.tf
resource "aws_eks_cluster" "eks_cluster" {
  name     = var.cluster_name
  role_arn = aws_iam_role.eks_cluster_role.arn
  version  = var.cluster_version

  vpc_config {
    endpoint_private_access = false
    endpoint_public_access  = true
    subnet_ids              = var.subnet_ids #public
    security_group_ids      = [aws_security_group.eks_sg.id]
  }

  kubernetes_network_config {
    service_ipv4_cidr = var.k8s_service_cidr
  }

  depends_on = [
    aws_iam_role_policy_attachment.eks_policy_attachment,
    aws_iam_role_policy_attachment.worker_policy_attachment,
  ]
}

resource "aws_security_group" "eks_sg" {
  name        = "${var.cluster_name}-eks-security-group"
  description = "Cluster communication with worker nodes"
  vpc_id      = var.vpc_id

  tags = {
    Name                                        = "kubernetes.io/cluster/${var.cluster_name}"
    "kubernetes.io/cluster/${var.cluster_name}" = "owned"
  }
}

resource "aws_security_group_rule" "eks_sg_egress" {
  type              = "egress"
  security_group_id = aws_security_group.eks_sg.id
  description       = "Allow all traffic from anywhere"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_vpc_security_group_ingress_rule" "cluster_ingress_workstation_https_aws_security_group_rule" {
  security_group_id            = aws_security_group.eks_sg.id
  description                  = "Allow workstation to communicate with the cluster API Server"
  from_port                    = 443
  ip_protocol                  = "tcp"
  to_port                      = 443
  referenced_security_group_id = aws_security_group.eks_nodes_sg.id
}

#resource "aws_security_group" "eks_sg" {
#  name   = "${var.cluster_name}-eks-security-group"
#  vpc_id = var.vpc_id
#
#  ingress {
#    from_port = 0
#    to_port   = 0
#    protocol  = "-1"
#    self      = true
#  }
#
#  egress {
#    from_port        = 0
#    to_port          = 0
#    protocol         = "-1"
#    cidr_blocks      = ["0.0.0.0/0"]
#    ipv6_cidr_blocks = ["::/0"]
#  }
#}

#resource "aws_ec2_tag" "eks_sg_tag" {
#  resource_id = aws_security_group.eks_sg.id
#  key         = "kubernetes.io/cluster/${var.cluster_name}"
#  value       = "owned"
#}


#resource "aws_security_group_rule" "eks_sg_to_eks_nodes_sg_ingress" {
#  type                     = "ingress"
#  from_port                = 443
#  to_port                  = 443
#  protocol                 = "tcp"
#  security_group_id        = aws_security_group.eks_sg.id
#  source_security_group_id = aws_security_group.eks_nodes_sg.id
#}
